# propu

./: .gitignore  README.md  pyproject.toml
src/propu/: __init__.py  bemt.py  constant.py  draft.py  isatmosphere.py  iteralg.py  jet.py  mplrc.py  turbine.py
src/propu/bemt/: __init__.py
src/propu/exam/: __init__.py  question1.py  question2.py
src/propu/exam/res/: speedLine.py  speedLine_100Nn.csv  speedLine_90Nn.csv  speedLine_95Nn.csv
src/propu/exercises/: E2_1__MV22_Osprey.py  E2_2__Sonaca_200.py  E2_3__MQ1B_Predator.py  E2_4__Activity_factor.py  E2_5__Blade_element_momentum.py  E3_1__Compressor_comparison.py  E3_2__Ten_stage_compressor.py  E3_3__Turbine_polytropic_efficiency.py  E3_4__Power_losses.py  E3_5__Jet_fuel_starter.py  E4_1__JT4A11_turbojet.py  E4_2__Nozzle_change.py  E4_3__JT4A11_afterburner.py  E4_4__Snecma_ATAR.py  E4_5__MarboreII_turbojet.py  E4_6__Two_spool_turbofan.py  E4_7__CFM56_mixed_exhaust.py  E4_8__PW2037.py  E4_9__M88_afterburn_turbofan.py  E7_1__Component_matching.py  E7_2__Counter_rotating_ducted_fan.py  E7_3__C1802_HBPR.py  E7_4__UAV_fan.py  __init__.py
src/propu/project/: __init__.py  draft.py  part1.py  part2.py  part3.py  part4.py  statement.py
src/propu/project/res/: clarkypolarsRe.py
src/propu/turbine/: __init__.py
src/propu/util/: __init__.py  constant.py  isatmosphere.py  mplrc.py
